# geodata-auto-ingest

./: README.md  pyproject.toml
boundaries/: lesotho_boundary_admin0.geojson
env/: chirps_v3_africa.env  chirps_v3_africa.env.example  chirps_v3_africa_monthly.env  lms_geotiff_template.env.example  netcdf_template.env.example
scripts/: run_chirps_v3_africa.sh  run_chirps_v3_africa_monthly.sh  run_lms_geotiff_template.sh  run_netcdf_template.sh
src/geodata_auto_ingest/common/: chirps.py  ingest.py  logging_utils.py  shell.py
src/geodata_auto_ingest/sources/: chirps_v3_africa.py  chirps_v3_africa_monthly.py  lms_geotiff_template.py  netcdf_template.py
work/chirps-v3-africa-monthly/clipped/: chirps-v3.0.2020.01-LSO.tif  chirps-v3.0.2020.02-LSO.tif  chirps-v3.0.2020.03-LSO.tif  chirps-v3.0.2020.04-LSO.tif  chirps-v3.0.2020.05-LSO.tif  chirps-v3.0.2020.06-LSO.tif  chirps-v3.0.2020.07-LSO.tif  chirps-v3.0.2020.08-LSO.tif  chirps-v3.0.2020.09-LSO.tif  chirps-v3.0.2020.10-LSO.tif  chirps-v3.0.2020.11-LSO.tif  chirps-v3.0.2020.12-LSO.tif  chirps-v3.0.2021.01-LSO.tif  chirps-v3.0.2021.02-LSO.tif  chirps-v3.0.2021.03-LSO.tif  chirps-v3.0.2021.04-LSO.tif  chirps-v3.0.2021.05-LSO.tif  chirps-v3.0.2021.06-LSO.tif  chirps-v3.0.2021.07-LSO.tif  chirps-v3.0.2021.08-LSO.tif  chirps-v3.0.2021.09-LSO.tif  chirps-v3.0.2021.10-LSO.tif  chirps-v3.0.2021.11-LSO.tif  chirps-v3.0.2021.12-LSO.tif  chirps-v3.0.2022.01-LSO.tif  chirps-v3.0.2022.02-LSO.tif  chirps-v3.0.2022.03-LSO.tif  chirps-v3.0.2022.04-LSO.tif  chirps-v3.0.2022.05-LSO.tif  chirps-v3.0.2022.06-LSO.tif  (+44 more)
(+344 files in other folders)
